# Digital_wallet

./: README.md
client/digital_wallet/: .gitignore  README.md  angular.json  package-lock.json  package.json
client/digital_wallet/src/: styles.css
client/digital_wallet/src/app/: api.service.ts  app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
client/digital_wallet/src/app/components/admin-reports/: admin-reports.component.css  admin-reports.component.html  admin-reports.component.ts
client/digital_wallet/src/app/components/admin-transactions/: admin-transactions.component.css  admin-transactions.component.html  admin-transactions.component.ts
client/digital_wallet/src/app/components/admin-wallets/: admin-wallets.component.css  admin-wallets.component.html  admin-wallets.component.spec.ts  admin-wallets.component.ts
client/digital_wallet/src/app/components/create-wallet/: create-wallet.component.css  create-wallet.component.html  create-wallet.component.ts
client/digital_wallet/src/app/components/deposit/: deposit.component.css  deposit.component.html  deposit.component.ts
client/digital_wallet/src/app/components/suspend-wallet/: suspend-wallet.component.css  suspend-wallet.component.html  suspend-wallet.component.spec.ts  suspend-wallet.component.ts
client/digital_wallet/src/app/components/transaction-history/: transaction-history.component.css  (+2 more)
server/: pyproject.toml
server/app/: db.py  dependencies.py  main.py  models.py
server/app/routes/: admin_routes.py  authentication_routes.py  user_routes.py
(+6 files in other folders)
